// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should render correctly with all the default props 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: inline-block;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

<div>
  <div
    class="c0"
    display="block"
  >
    <span
      class="c1"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render properly when flow direction is horizontal and separator is set true 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: inline-block;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 > div + div {
  border-left: 1px solid #98A7B7;
}

.c1 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: inline-block;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c1 > div + div {
  border-left: 1px solid #98A7B7;
}

.c3 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: inline-block;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c3 > div + div {
  border-left: 1px solid #98A7B7;
}

.c4 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: inline-block;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 > div + div {
  border-left: 1px solid #98A7B7;
}

.c5 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: inline-block;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 > div + div {
  border-left: 1px solid #98A7B7;
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:0px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:0px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:0px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:0px) {
  .c5 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c5 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c5 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c5 {
    padding: 2.4rem;
  }
}

<div>
  <div
    class="c0"
    display="block"
  >
    <div
      class="c1"
      display="block"
    >
      <span
        class="c2"
      >
        Dummy Text
      </span>
    </div>
    <div
      class="c3"
      display="block"
    >
      <span
        class="c2"
      >
        Dummy Text
      </span>
    </div>
    <div
      class="c4"
      display="block"
    >
      <span
        class="c2"
      >
        Dummy Text
      </span>
    </div>
    <div
      class="c5"
      display="block"
    >
      <span
        class="c2"
      >
        Dummy Text
      </span>
    </div>
    <div
      class="c0"
      display="block"
    >
      <span
        class="c2"
      >
        Dummy Text
      </span>
    </div>
  </div>
</div>
`;

exports[`Card component should render properly when fullWidth and fullHeight is set true 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: block;
  width: 100%;
  height: 100%;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

<div>
  <div
    class="c0"
    display="block"
  >
    <span
      class="c1"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render properly when it is clickable  1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: inline-block;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0,
.c0 * {
  cursor: pointer;
}

.c0:hover {
  box-shadow: 0 0.4rem 0.8rem rgba(176,188,200,0.6);
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

<div>
  <div
    class="c0"
    display="block"
  >
    <span
      class="c1"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render properly when separator is set true flow direction is vertical 1`] = `
.c2 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: inline-block;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 > div + div {
  border-top: 1px solid #98A7B7;
}

.c1 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: inline-block;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0;
  margin: 0;
  border: none;
  box-shadow: none;
  background-color: transparent;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c3 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
  display: inline-block;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0;
  margin: 0;
  border: none;
  box-shadow: none;
  background-color: transparent;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c4 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
  display: inline-block;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0;
  margin: 0;
  border: none;
  box-shadow: none;
  background-color: transparent;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 6;
  -ms-flex: 6;
  flex: 6;
  display: inline-block;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0;
  margin: 0;
  border: none;
  box-shadow: none;
  background-color: transparent;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:0px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c1 {
    padding: 2.4rem;
  }
}

@media (min-width:0px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c3 {
    padding: 2.4rem;
  }
}

@media (min-width:0px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c4 {
    padding: 2.4rem;
  }
}

@media (min-width:0px) {
  .c5 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c5 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c5 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c5 {
    padding: 2.4rem;
  }
}

<div>
  <div
    class="c0"
    display="block"
  >
    <div
      class="c1"
      display="block"
    >
      <span
        class="c2"
      >
        Marks
      </span>
    </div>
    <div
      class="c3"
      display="block"
    >
      <span
        class="c2"
      >
        Dummy Text
      </span>
    </div>
    <div
      class="c4"
      display="block"
    >
      <span
        class="c2"
      >
        Dummy Text
      </span>
    </div>
    <div
      class="c5"
      display="block"
    >
      <span
        class="c2"
      >
        Dummy Text
      </span>
    </div>
  </div>
</div>
`;

exports[`Card component should render properly with "flat" variant 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: inline-block;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  border-radius: 0;
  margin: 0;
  border: none;
  box-shadow: none;
  background-color: transparent;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

<div>
  <div
    class="c0"
    display="block"
  >
    <span
      class="c1"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render properly with "solid" variant 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: inline-block;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

<div>
  <div
    class="c0"
    display="block"
  >
    <span
      class="c1"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render properly with display "block" 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: inline-block;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

<div>
  <div
    class="c0"
    display="block"
  >
    <span
      class="c1"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render properly with display "flex" 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
}

.c0 {
  overflow: auto;
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background-color: #ffffff;
  border-radius: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(176,188,200,0.2);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media (min-width:0px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:768px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1024px) {
  .c0 {
    padding: 2.4rem;
  }
}

@media (min-width:1280px) {
  .c0 {
    padding: 2.4rem;
  }
}

<div>
  <div
    class="c0"
    display="flex"
  >
    <span
      class="c1"
    >
      Dummy Text
    </span>
  </div>
</div>
`;
